CSS optimizer tried to optimize z-index values, which is not a good idea when using injected styles, so disabled. Also fix sensible z-index values for component. Fixes #18.

--- a/src/SizeMeApp.scss
+++ b/src/SizeMeApp.scss
@@ -44,7 +44,7 @@ a.link-btn {
     position: relative;
     min-width: 160px;
     border-radius: 4px;
-    z-index: 2000;
+    z-index: 5;
 
     &:after {
       content: "";
