--- a/src/common/LoginFrame.scss
+++ b/src/common/LoginFrame.scss
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.5);
-  z-index: 1100;
+  z-index: 4;
 }
 
 .login-frame-modal {
