--- a/src/common/SizeForm.scss
+++ b/src/common/SizeForm.scss
@@ -135,7 +135,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.5);
-  z-index: 1000;
+  z-index: 10;
 }
 
 .measurement-guide-modal {
