--- a/src/sizeguide/SizeGuide.scss
+++ b/src/sizeguide/SizeGuide.scss
@@ -29,7 +29,7 @@ a.link-btn.size-guide {
   color: black !important;
   background-color: #fff18f !important;
   opacity: 1 !important;
-  z-index: 9999 !important;
+  z-index: 10 !important;
   padding: 10px 10px !important;
   border-radius: 5px !important;
 
@@ -88,7 +88,7 @@ a.link-btn.size-guide {
   right: 0;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.75);
-  z-index: 1000;
+  z-index: 10;
 }
 
 .size-guide-modal {
